updated attribute to prevent tap zoom on ios

--- a/wordStyle.css
+++ b/wordStyle.css
@@ -117,6 +117,7 @@ margin-bottom: 4px;
   margin-right: 5px;
   padding: 0px;
   -webkit-appearance: none !important;
+  touch-action: manipulation;
   
 }
 
@@ -131,6 +132,7 @@ margin-bottom: 4px;
   margin-bottom: 7px;
   margin-right: 5px;
  -webkit-appearance: none !important;
+ touch-action: manipulation;
 }
 
 .wordleKeyboardGreen {
@@ -146,6 +148,7 @@ margin-bottom: 4px;
   margin-right: 5px;
   padding: 0px;
   -webkit-appearance: none !important;
+  touch-action: manipulation;
 }
 
 .wordleKeyboardYellow {
@@ -161,6 +164,7 @@ margin-bottom: 4px;
   margin-right: 5px;
   padding: 0px;
   -webkit-appearance: none !important;
+  touch-action: manipulation;
 }
 .wordleKeyboardGrey {
   background-color: rgb(156, 160, 160);
@@ -176,6 +180,7 @@ margin-bottom: 4px;
   margin-right: 5px;
   padding: 0px;
   -webkit-appearance: none !important;
+  touch-action: manipulation;
 }
 
 /* The snackbar - position it at the bottom and in the middle of the screen */
